--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,4 +41,4 @@ jobs:
           platforms: linux/amd64, linux/arm64
           push: true
           tags: |
-            ghcr.io/pterodactyl/yolks:go_${{ matrix.tag }}
+            ghcr.io/phoenixpanel/yolks:go_${{ matrix.tag }}
