--- a/.github/workflows/installers.yml
+++ b/.github/workflows/installers.yml
@@ -52,6 +52,7 @@ jobs:
       matrix:
         tag:
           - debian
+          - wine
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-buildx-action@v3
