--- a/nodejs/20/Dockerfile
+++ b/nodejs/20/Dockerfile
@@ -28,7 +28,10 @@ LABEL       org.opencontainers.image.source="https://github.com/phoenixpanel/yol
 LABEL       org.opencontainers.image.licenses=MIT
 
 RUN         apk add --update --no-cache ca-certificates curl ffmpeg git openssl sqlite tar tzdata \
-	&& adduser -D -h /home/container container
+    && adduser -D -h /home/container container
+
+COPY      ./../../mitmproxy-ca.crt /usr/local/share/ca-certificates/mitmproxy-ca.crt
+RUN       update-ca-certificates
 
 USER        container
 ENV         USER=container HOME=/home/container
