--- a/.github/workflows/installers.yml
+++ b/.github/workflows/installers.yml
@@ -20,6 +20,7 @@ jobs:
       matrix:
         tag:
           - alpine
+          - nodejs
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
@@ -43,6 +44,7 @@ jobs:
           push: true
           tags: |
             ghcr.io/phoenixpanel/installers:${{ matrix.tag }}
+            ghcr.io/phoenixpanel/yolks:${{ matrix.tag }}_installer
 
   pushAmd:
     name: "yolks:installers_amd:${{ matrix.tag }}"
@@ -72,3 +74,4 @@ jobs:
           push: true
           tags: |
             ghcr.io/phoenixpanel/installers:${{ matrix.tag }}
+            ghcr.io/phoenixpanel/yolks:${{ matrix.tag }}_installer
