--- a/.github/workflows/installers.yml
+++ b/.github/workflows/installers.yml
@@ -21,6 +21,7 @@ jobs:
         tag:
           - alpine
           - nodejs
+          - python
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
