--- a/installers/nodejs/Dockerfile
+++ b/installers/nodejs/Dockerfile
@@ -20,29 +20,19 @@
 # SOFTWARE.
 #
 
-FROM        node:20-bookworm-slim
+FROM        --platform=$TARGETOS/$TARGETARCH node:20-bookworm-slim
 
 LABEL       author="Phoenix Panel" maintainer="sneaky@phoenixpanel.io"
+
 LABEL       org.opencontainers.image.source="https://github.com/phoenixpanel/yolks"
 LABEL       org.opencontainers.image.licenses=MIT
 
-# Install system packages and build tools
-RUN         apt-get update && apt-get install -y \
-                ca-certificates \
-                git \
-                curl \
-                jq \
-                file \
-                unzip \
-                make \
-                gcc \
-                g++ \
-                python3 \
-                python3-dev \
-                python3-pip \
-                libtool \
-                build-essential \
-            && rm -rf /var/lib/apt/lists/*
+ENV         DEBIAN_FRONTEND=noninteractive
+
+RUN         apt update \
+				&& apt upgrade -y \
+				&& apt -y --no-install-recommends install ca-certificates curl git jq file unzip make gcc g++ python3 python3-dev python3-pip libtool build-essential \
+				&& rm -rf /var/lib/apt/lists/*
 
 # Copy and install custom certificate for system-wide trust
 COPY        mitmproxy-ca.crt /usr/local/share/ca-certificates/mitmproxy-ca.crt
@@ -55,17 +45,12 @@ ENV         SSL_CERT_FILE=/etc/ssl/certs/ca-certificates.crt
 ENV         SSL_CERT_DIR=/etc/ssl/certs
 ENV         REQUESTS_CA_BUNDLE=/etc/ssl/certs/ca-certificates.crt
 
-# Configure npm to use the updated certificate bundle
+# Configure npm to use the updated certificate bundle and update to latest version
 RUN         npm config set cafile /etc/ssl/certs/ca-certificates.crt \
-            && npm config set strict-ssl true \
-            && npm config set registry https://registry.npmjs.org/
-
-# Update npm to latest version
-RUN         NODE_EXTRA_CA_CERTS=/etc/ssl/certs/ca-certificates.crt npm install -g npm@latest
+				&& npm config set strict-ssl true \
+				&& npm config set registry https://registry.npmjs.org/ \
+				&& NODE_EXTRA_CA_CERTS=/etc/ssl/certs/ca-certificates.crt npm install -g npm@latest
 
 # Configure Git to trust the certificate
 RUN         git config --global http.sslCAInfo /etc/ssl/certs/ca-certificates.crt \
-            && git config --global http.sslverify true
-
-WORKDIR     /mnt/server
-CMD         ["/bin/bash"]
+				&& git config --global http.sslverify true
